# opentrons-bot

./: .pre-commit-config.yaml  README.md  main.py  makefile  pyproject.toml
opentrons_bot/: errors.py
