[project]
name = "opentrons_bot"
version = "0.1.0"
description = ""
authors = [
  { name = "xiaoling", email = "samuel.ling.xiao@qq.com" }
]
packages = [{include = "opentrons/*"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "opentrons (==8.3.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
